--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    margin: .5em;
+    margin: 2rem;
 }
 
 .up {
@@ -25,10 +25,10 @@ body {
 }
 
 .component {
-    border: gray .5px solid;
-    border-radius: 5px;
+    border: 1px solid #E2E2E2;
+    border-radius: .8rem;
     min-height: 100px;
-    margin: 10px;
+    margin: 0 1.5rem 1.5rem 0;
 }
 
 .upper {
